# 2024-project-allocation-stats

./: README.md  pyproject.toml
scripts/: compare_approx_exact.py  survey_simulation.py
src/fair_stats/: __init__.py  survey.py
tests/: conftest.py  test_fair_stats.py  test_survey.py
