[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[pytest]
testpaths = "tests"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"

[project]
name = "fair_stats"
version = "0.0.1"
authors = [
  { name="George Bissias", email="gbiss@cs.umass.edu" },
]
description = "Statistics for fair allocation"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
                "black>=23.11.0",
                "isort>=5.12.0",
                "pdoc>=14.1.0",
                "pytest>=7.4.3",
                "fair@git+https://github.com/gbiss/2023-project-fair",
                "numpy>=1.26.4",
               ]